[package]
name = "str-similarity"
description = "A string similarity library"
authors = ["Jerebtw"]
version = "2.0.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/jerebtw/str-similarity"
keywords = ["string", "similarity"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "sim_benchmark"
harness = false
