[package]
name = "str-similarity"
description = "A string similarity library"
authors = ["Jerebtw"]
version = "3.0.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/jerebtw/str-similarity"
keywords = ["string", "similarity"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sim_benchmark"
harness = false
