[package]
name = "str-similarity"
description = "A string similarity library"
authors = ["Jerebtw"]
version = "3.0.2"
license = "MIT"
edition = "2021"
repository = "https://github.com/jerebtw/str-similarity"
keywords = ["string", "similarity"]

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "sim_benchmark"
harness = false
